config/kubernetes/workloads.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui

  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: evestidor/ui
