config/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evestidor-ui

spec:
  type: ClusterIP

  selector:
    app: evestidor-ui

  ports:
    - name: http
      port: 8000
