config/kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: evestidor-ui

spec:
  selector:
    app: ui

  ports:
    - name: http
      port: 8000
      targetPort: 80
  type: LoadBalancer
